simple design modifications

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@ h1 {
   border-radius: 1rem;
   padding: 1rem;
 }
+.room-name {
+  color: white;
+}
+
 .chat-history {
   height: 70vh;
   overflow-y: scroll;
